# rzd-bot

./: loader.py  main.py  pyproject.toml  requirements.txt
handlers/: __init__.py  callback_queries.py  commands.py  find_tickets.py  plug.py
keyboards/: __init__.py  answer_keyboard.py  date_selector.py  station_selector.py  trains_navigator.py
services/: api.py  filters.py  sorter.py
utils/: message_box.py  models.py  states.py
